objects/OF_Puntamento_Callout__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>OF_OGW__c</fullName>
        <label>OGW</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_TTMRequest__c</fullName>
        <defaultValue>&apos;localhost:2110&apos;</defaultValue>
        <label>OF_TTMRequest</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tibco_Collaudo__c</fullName>
        <label>Tibco_Collaudo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tibco_Puntamento_SH__c</fullName>
        <label>Tibco_Puntamento_SH</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tibco_Sviluppo__c</fullName>
        <label>Tibco_Sviluppo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Puntamento Callout</label>
</CustomObject>